<resources>
    <string name="app_name">MainDish</string>
    <string name="progress_dialog_loading">Cargando...</string>

    <!-- Navegacion -->
    <!-- Cliente -->
    <string name="drawer_productos">Productos</string>
    <string name="drawer_carrito">Carrito</string>

    <!-- Restaurant -->
    <string name="drawer_gestion_productos">Gestión de productos</string>
    <string name="drawer_lista_pedidos">Lista de pedidos</string>
    <string name="drawer_lista_entregas">Entregados</string>
    <string name="drawer_lista_publicidad">Publicidad</string>
    <string name="drawer_lista_demo">Demo Soporte venta</string>

    <!-- App -->
    <string name="drawer_about">Acerca de </string>
    <string name="drawer_logout">Cerrar sesión </string>

    <!-- Productos -->
    <string name="bienvenido">Bienvenido!!</string>
    <string name="antojo">Que se servirá hoy?</string>
    <string name="antojo_demo">La experiencia completa</string>
    <string name="instrucciones">Agrega tus productos al Carrito</string>

    <string name="categoria">Tipo de producto</string>
    <string name="nombre_producto">Nombre del producto</string>
    <string name="precio_producto">Precio</string>
    <string name="descripcion_producto">Descripción</string>
    <string name="item_descripcion_tooltip">Descripción del plato/producto</string>
    <string name="crear_producto">Crear producto</string>

    <string name="error_nombre">Ingrese el nombre del producto</string>
    <string name="error_precio">Ingrese el precio del producto</string>
    <string name="error_precio_valido">Ingrese un precio válido</string>
    <string name="error_descripcion">Ingrese la descripción del producto</string>

    <string name="error_nombre_usuario">Ingrese su nombre completo</string>
    <string name="error_direccion">Ingrese su nombre completo</string>
    <string name="error_telefono">Ingrese su nombre completo</string>

    <!-- Foto -->
    <string name="titulo_adjunta">Adjunte una fotografía del producto/plato</string>
    <string name="adjuntar">Adjuntar</string>
    <string name="continuar">Continuar</string>
    <string name="atras">Atrás</string>

    <string name="error_adjuntar">Adjunte una foto por favor</string>
    <string name="error_subir_foto">Error al adjuntar foto</string>
    <string name="registro_correcto">Registro correcto</string>

    <!-- Carrito -->
    <string name="titulo_carrito">Carrito de compra</string>
    <string name="carrito_vaciar">Vaciar</string>
    <string name="carrito_procesar">Procesar</string>
    <string name="carrito_total">Total: </string>

    <string name="carrito_precio_unitario">Precio: </string>
    <string name="carrito_cantidad">Cantidad: </string>

    <!-- Procesar pedido -->
    <string name="ya_casi">Todo listo!</string>
    <string name="procesar_instrucciones">Ingresa los datos del cliente</string>
    <string name="nombre_completo">Nombre completo/Razón Social</string>
    <string name="direccion">NIT</string>
    <string name="telefono">Piso</string>
    <string name="observaciones">Observaciones</string>
    <string name="observaciones_hint">Llena este campo con detalles de tu pedido.</string>
    <string name="enviar_pedido">Enviar pedido</string>
    <string name="datos_pedido">Datos del pedido</string>
    <string name="monto">Monto:</string>

    <!-- Detalle pedido -->
    <string name="detalle_pedido">Detalle de pedido</string>

    <!-- Acerca -->
    <string name="descripcion_logo">Logo MainDish</string>
    <string name="descripcion_github">Github</string>

    <string name="version">Beta 1.0 (Demo MainDish)</string>
    <string name="github">https://maindish.io</string>
    <string name="contacto">Andrés Vasquez Agramont</string>
    <string name="contacto_email">andres.vasquez.agramont@gmail.com</string>
    <string name="contacto_celular">+591 60507900</string>
</resources>
