<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/padding_xxl">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_xxl">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/descripcion_logo"
            android:maxHeight="200dp"
            android:src="@drawable/maindish" />

        <TextView
            android:id="@+id/lblVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_xxl"
            android:gravity="center"
            android:text="@string/version" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardGithub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/padding_xxl"
            app:cardElevation="@dimen/fab_elevation">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/padding_lg">

                <ImageView
                    android:id="@+id/imgGithub"
                    android:layout_width="@dimen/logo_github"
                    android:layout_height="@dimen/logo_github"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/descripcion_github" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/padding_xl"
                    android:paddingLeft="@dimen/padding_xl"
                    android:text="@string/github"
                    android:textColor="@color/text"
                    android:textSize="@dimen/text_md" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="@dimen/padding_double"
        android:visibility="visible">

        <TextView
            android:id="@+id/lblNombreCompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/contacto"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_xl"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/contacto_email"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_md" />

        <TextView
            android:id="@+id/lblCelular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_xl"
            android:gravity="center"
            android:text="@string/contacto_celular"
            android:textColor="@color/secondary"
            android:textSize="@dimen/text_md"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>