<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/lyBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/padding_xl">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/carrito_total"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/text"/>

                <TextView
                    android:id="@+id/lblTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    android:textColor="@color/text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnVaciar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/carrito_vaciar"/>

                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/btnProcesarCompra"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/carrito_procesar"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_above="@+id/lyBottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView
            android:id="@+id/lblTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drawer_carrito"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:padding="@dimen/padding_md"
            android:textStyle="bold"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvLista"
            android:padding="@dimen/padding_md"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        </LinearLayout>
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
