<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_detalle_pedido"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="net.jakare.devlivery.ui.activities.DetallePedido">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <LinearLayout
            android:id="@+id/lyBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_xl"
            android:layout_alignParentBottom="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carrito_total"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/text"/>

            <TextView
                android:id="@+id/lblTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                android:textColor="@color/text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_above="@+id/lyBottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/drawer_carrito"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:padding="@dimen/padding_md"
                android:textStyle="bold"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvLista"
                android:padding="@dimen/padding_md"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        app:elevation="@dimen/card_elevation"
        app:cardCornerRadius="@dimen/card_radius"
        app:contentPadding="@dimen/padding_sm">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_xl">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding_xl"
                        android:text="@string/nombre_completo"/>

                    <TextView
                        android:id="@+id/lblNombreCompleto"
                        android:layout_marginTop="@dimen/padding_sm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_marginTop="@dimen/padding_sm"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/direccion"/>

                    <TextView
                        android:id="@+id/lblDireccion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_marginTop="@dimen/padding_sm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/telefono"/>

                    <TextView
                        android:id="@+id/lblTelefono"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding_sm"
                        android:text="@string/observaciones"/>

                    <TextView
                        android:id="@+id/lblObservaciones"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"/>


                    <Button
                        android:id="@+id/btnEnviar"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_marginTop="@dimen/padding_xl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/padding_lg"
                        android:paddingBottom="@dimen/padding_lg"
                        android:text="@string/carrito_procesar"
                        android:layout_marginBottom="@dimen/padding_double"/>
                </LinearLayout>
            </android.support.v4.widget.NestedScrollView>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>

